--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -78,7 +78,6 @@
         android:background="@drawable/borde"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:inputType="number"
         android:maxLength="5"
         android:singleLine="true"
         android:textAlignment="center"
@@ -100,10 +99,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="-1dp"
         android:background="@drawable/borde"
-        android:editable="false"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:inputType="text"
+        android:inputType="none"
         android:maxLength="5"
         android:singleLine="true"
         android:textAlignment="center"
@@ -129,7 +127,8 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="8dp"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        android:layout_marginTop="80dp" />
+        android:layout_marginTop="110dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imgFondoAcceso"
@@ -213,15 +212,16 @@
         android:layout_height="60dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:background="@color/primary"
         android:text="Buscar"
         android:textColor="@color/icons2"
         android:textSize="23sp"
         android:visibility="gone"
+        app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintRight_toLeftOf="@+id/edtNoTarjeta"
+        app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -232,20 +232,145 @@
 
     <ToggleButton
         android:id="@+id/tbnTipoLectura"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="28dp"
         android:background="@color/accent"
         android:checked="true"
         android:textColor="@color/ksw_md_solid_disable"
         android:textOff="Olvidó tarjeta"
         android:textOn="Checar con tarjeta"
-        app:layout_constraintHorizontal_bias="0.951"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.581"
+        app:layout_constraintLeft_toRightOf="@+id/edtNoTarjeta"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edtNoEmpleado" />
+        app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada" />
+
+    <Button
+        android:id="@+id/btnCero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:text="0"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+
+    <Button
+        android:id="@+id/btnUno"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:text="1"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnCero"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+
+    <Button
+        android:id="@+id/btnDos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:text="2"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnUno"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+
+    <Button
+        android:id="@+id/btnTres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:text="3"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnDos"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+
+    <Button
+        android:id="@+id/btnCuatro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="0dp"
+        android:text="4"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnTres"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
+
+    <Button
+        android:id="@+id/btnCinco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="5"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDos" />
+
+    <Button
+        android:id="@+id/btnSeis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="6"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnCinco"
+        app:layout_constraintTop_toBottomOf="@+id/btnUno" />
+
+    <Button
+        android:id="@+id/btnSiete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="7"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnSeis"
+        app:layout_constraintTop_toBottomOf="@+id/btnDos" />
+
+    <Button
+        android:id="@+id/btnOcho"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="8"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnSiete"
+        app:layout_constraintTop_toBottomOf="@+id/btnTres" />
+
+    <Button
+        android:id="@+id/btnNueve"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="9"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@+id/btnOcho"
+        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />
+
+    <Button
+        android:id="@+id/btnBorrar"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Borrar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/imgFondoGuardia"
+        app:layout_constraintLeft_toRightOf="@+id/btnCuatro"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
 
 
 </android.support.constraint.ConstraintLayout>
