--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -387,5 +387,15 @@
         app:layout_constraintTop_toBottomOf="@+id/edtNoTarjeta"
         app:srcCompat="@drawable/im_logo_penia" />
 
+    <ImageView
+        android:id="@+id/imgConexion"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cuadro_rojo" />
+
 
 </android.support.constraint.ConstraintLayout>
