--- a/app/src/main/res/layout/fragment_configuracion.xml
+++ b/app/src/main/res/layout/fragment_configuracion.xml
@@ -147,12 +147,28 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="42dp"
         android:background="@color/primary_light"
         android:text="@string/guardar"
         android:textColor="@android:color/white"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spPuertasUnico" />
+        android:layout_marginTop="42dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnActualizarPuertasC" />
+
+    <Button
+        android:id="@+id/btnActualizarPuertasC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/primary"
+        android:text="Actualizar puertas"
+        android:textColor="@android:color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spPuertasUnico"
+        app:layout_constraintHorizontal_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
